admin: botão salvar em RelogioPontoAdmin

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -99,7 +99,7 @@
 					    </thead>
 					    <tbody>
 					      <tr>
-					      <td><input type="checkbox"></td>
+					      <td><!-- < input type="checkbox"> --></td>
 					        <td>					        
 					        Tiago Donizetti Gomes
 					        </td>
