--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,23 +3,13 @@
 <html>
 <head>
 <title>Index</title>
-<!-- Última versão CSS compilada e minificada -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous">
 
-<!-- Tema opcional -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-	crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
+<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
 
-<link rel="stylesheet" type="text/css"
-	href="{% static 'css/main.css' %}">
-<link rel="stylesheet" type="text/css"
-	href="{% static 'css/bootstrap-datepicker3.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.min.css' %}">
 </head>
 <body>
 	<div class="main">
@@ -35,83 +25,20 @@
 					href="#registros_dia">Registros por dia</a></li>
 				<li role="presentation"><a data-toggle="tab"
 					href="#registros_funcionarios">Registros por funcionários</a></li>
-				<li role="presentation"><a data-toggle="tab"
-					href="#relogios">Relógios</a></li>
+				<li role="presentation"><a data-toggle="tab" href="#relogios">Relógios</a></li>
 				<li role="presentation"><a href="{% url 'site_logout' %}">Sair</a></li>
 
 			</ul>
 			<div class="tab-content panel-body">
 				<div id="gerar" class="tab-pane fade in active">
 					<h3>Gerar registros</h3>
-					<form method="post" action="{% url 'gerar_arquivo' %}">
-						{% csrf_token %}
-						<div class="row panel">
-							<div class="col-sm-6">
-								<div class="input-daterange input-group" id="datepicker">
-									<span class="input-group-addon">Período: </span> <span
-										class="input-gerar-arquivo">
-										{{form_gerar_arquivo.inicio }}</span> <span class="input-group-addon">até</span>
-									<span class="input-gerar-arquivo">
-									 {{form_gerar_arquivo.fim }}</span>
-								</div>
-							</div>
-							<div class="col-sm-4">&nbsp;</div>
-							<div class="col-sm-2">
-								<input type="submit" value="Gerar" class="btn btn-success">
-							</div>
-
-						</div>
-
-						<div class="row">
-							<div class="col-sm-6">
-								<div class="checkbox">
-									<label> <input type="checkbox"
-										value="marcar_como_exportados">Marcar registros como
-										exportados
-									</label>
-								</div>
-							</div>
-						</div>
-					</form>
-					<div class="row">
-						<div class="col-sm-12">
-							<button class="btn btn-link btn-xs">Desfazer marcar
-								exportados</button>
-						</div>
-					</div>
-
-
+					{% include 'gerar.html' %}
 				</div>
-				<!-- fim #gerar -->
-
 				<div id="colaboradores" class="tab-pane fade">
 					<h3>Colaboradores</h3>
-					<table class="table" id="tabela_funcionarios">
-						<thead>
-					      <tr>
-					        <th></th>
-					        <th>Nome</th>
-					        <th>PIS</th>
-					        <th>Matrículas</th>
-					        <th>Relógios</th>
-					        
-					      </tr>
-					    </thead>
-					    <tbody>
-					      <tr>
-					      <td><!-- < input type="checkbox"> --></td>
-					        <td>					        
-					        Tiago Donizetti Gomes
-					        </td>
-					        <td>00000000</td>
-					        <td>- 0000</td>
-					        <td>Relógio 1</td>
-					        
-					      </tr>
-					      
-					    </tbody>
-					</table>
+					{% include 'colaboradores.html' %}
 				</div>
+
 				<div id="registros_dia" class="tab-pane fade">
 					<h3>Registros por dia</h3>
 					<p>Sed ut perspiciatis unde omnis iste natus error sit
@@ -127,7 +54,7 @@
 					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 						laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
-				
+
 			</div>
 
 		</div>
