--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -4,31 +4,26 @@
 <head>
 <title>Index</title>
 
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.min.css' %}" type="text/css">
 
-<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
-<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.min.css' %}">
 </head>
 <body>
 	<div class="main">
-
-
 		<div class="panel panel-default form-principal">
+			<div class="panel-heading">
+			
 			<ul class="nav nav-pills" role="tablist">
-				<li role="presentation" class="active"><a data-toggle="tab"
-					href="#gerar">Gerar</a></li>
-				<li role="presentation"><a data-toggle="tab"
-					href="#colaboradores">Colaboradores</a></li>
-				<li role="presentation"><a data-toggle="tab"
-					href="#registros_dia">Registros por dia</a></li>
-				<li role="presentation"><a data-toggle="tab"
-					href="#registros_funcionarios">Registros por funcionários</a></li>
+				<li role="presentation" class="active"><a data-toggle="tab" href="#gerar">Gerar</a></li>
+				<li role="presentation"><a data-toggle="tab" href="#colaboradores">Colaboradores</a></li>
+				<li role="presentation"><a data-toggle="tab" href="#registros_dia">Registros por dia</a></li>
+				<li role="presentation"><a data-toggle="tab" href="#registros_funcionarios">Registros por funcionários</a></li>
 				<li role="presentation"><a data-toggle="tab" href="#relogios">Relógios</a></li>
 				<li role="presentation"><a href="{% url 'site_logout' %}">Sair</a></li>
-
 			</ul>
+			</div>
 			<div class="tab-content panel-body">
 				<div id="gerar" class="tab-pane fade in active">
 					<h3>Gerar registros</h3>
@@ -41,34 +36,24 @@
 
 				<div id="registros_dia" class="tab-pane fade">
 					<h3>Registros por dia</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit
-						voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 				</div>
 				<div id="registros_funcionarios" class="tab-pane fade">
 					<h3>Registros por funcionários</h3>
-					<p>Eaque ipsa quae ab illo inventore veritatis et quasi
-						architecto beatae vitae dicta sunt explicabo.</p>
+					<p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 				</div>
 				<div id="relogios" class="tab-pane fade">
 					<h3>Relógios</h3>
-					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
-
 			</div>
 
 		</div>
 
 
 	</div>
-	<!-- jQuery (obrigatório para plugins JavaScript do Bootstrap) -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!-- Última versão JavaScript compilada e minificada -->
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-		crossorigin="anonymous"></script>
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
 	<script src="{% static 'locales/bootstrap-datepicker.pt-BR.min.js' %}"></script>
 	<script>
