data-type="boolean"

--- a/core/templates/colaboradores.html
+++ b/core/templates/colaboradores.html
@@ -16,8 +16,7 @@
 		
 		{% for colaborador in colaboradores %}
 		<tr>
-			<td>
-				<!-- < input type="checkbox"> -->
+			<td data-type="boolean">
 			</td>
 			<td>{{ colaborador.nome }}</td>
 			<td>{{ colaborador.pis }}</td>
