--- a/core/templates/colaboradores.html
+++ b/core/templates/colaboradores.html
@@ -1,37 +1,55 @@
-{% if not tem_colaboradores %}
-<div class="alert alert-info">Nenhum colaborador registrado.</div>
-{% else %}
-<table class="table colaboradores" id="tabela_funcionarios">
-	<thead>
-		<tr>
-			<th>Nome</th>
-			<th>PIS</th>
-			<th>Matrículas</th>
-		</tr>
-	</thead>
-	<tbody>
-		
-		{% for colaborador in colaboradores %}
-		<tr>
 
-			<td>{{ colaborador.nome }}</td>
-			<td>{{ colaborador.pis }}</td>
-			<td>{{ colaborador.matriculas }}</td> 
-		
-			
-		</tr>
-		{% endfor %}
-		
+<form action="{% url 'salvar_colaboradores' %}" method="post">
 
-	</tbody>
-</table>
-<script>
-$(document).ready(function(){
-	//var jss = new JSimpleSpreadsheet('.colaboradores',{});
-});
-</script>
-{% endif %}
-<div class="panel">
+	{% csrf_token %} {{ form_colaboradores.management_form }}
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<table class="table colaboradores" id="tabela_funcionarios">
+				<thead>
+					<tr>
+						<th>Nome</th>
+						<th>PIS</th>
+						<th>Matrículas</th>
+					</tr>
+				</thead>
+				<tbody>
+
+					{% for colaborador in form_colaboradores %}
+					
+					<tr class="{%if colaborador.id.value %}old-item{% else %}new-item{%endif%}">
+
+						<td>{{ colaborador.id }}{{ colaborador.nome }}</td>
+						<td>{{ colaborador.pis }}</td>
+						<td>{{ colaborador.matriculas }}</td>
+
+					</tr>
+					
+					{% endfor %}
+
+
+				</tbody>
+			</table>
+			<script>
+				$(document).ready(function() {
+					//var jss = new JSimpleSpreadsheet('.colaboradores',{});
+				});
+			</script>
+
+			<div class="btn-group barra-colaboradores">
+				<div class="btn-group">
+					<input class="btn btn-primary" type="submit" value="Salvar">
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+</form>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h4>Importar</h4>
+	</div>
 	<div class="panel-body">
 		<form action="" method="post" enctype="multipart/form-data">
 			<div class="row">
