--- a/core/templates/exportar.html
+++ b/core/templates/exportar.html
@@ -29,13 +29,23 @@
 			</div>
 		</div>
 	</div>
-</form>
-<div class="row">
-	<div class="col-sm-12">
-		<button class="btn btn-link btn-xs">Desfazer marcar
-			exportados</button>
+	<div class="row">
+		<div class="col-sm-6">
+			<button class="btn btn-link btn-xs">Desfazer marcar
+				exportados</button>
+		</div>
 	</div>
-</div>
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="form-group">
+			  <label for="sel1">Select list:</label>
+			  <select class="form-control" id="sel1">
+			  </select>
+			</div>
+		</div>
+	</div>
+</form>
+
 <script>
 		$('.input-daterange').datepicker({
 			format : "dd/mm/yyyy",
