--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+{% extends 'admin/base.html' %}^
 {% load static %}
-<html>
-	<head>
-		<title>Relógio de ponto</title>		
+{% block extrahead %}{{ block.super }}
+	
 		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
 		<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css">
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
@@ -28,8 +27,9 @@
 			});
 			console.log()
 		</script>	
-	</head>
-<body>
+{% endblock  %}
+
+{% block content %}
 	<div class="main">			
 			<ul class="nav nav-tabs" role="tablist">
 				<li role="presentation" id="tab-exportar" ><a href="{% url 'index' %}">Exportar</a></li>
@@ -56,3 +56,4 @@
 	
 </body>
 </html>
+{% endblock  %}
