Validação de PIS

--- a/core/templates/colaboradores.html
+++ b/core/templates/colaboradores.html
@@ -32,6 +32,7 @@
 						</td>
 						<td>
 							{{ colaborador.pis }}
+							{{ colaborador.pis.errors }}
 						</td>
 						<td>
 							{{ colaborador.matriculas }}
