--- a/core/templates/exportar.html
+++ b/core/templates/exportar.html
@@ -1,50 +1,56 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-<h3>Exportar registros</h3>
-<form method="post" action="{% url 'gerar_arquivo' %}">
-	{% csrf_token %}
-	<div class="row panel">
-		<div class="col-sm-6">
-			<div class="input-daterange input-group" id="datepicker">
-				<span class="input-group-addon">Período: </span> <span
-					class="input-gerar-arquivo"> {{form_gerar_arquivo.inicio }}</span>
-				<span class="input-group-addon">até</span> <span
-					class="input-gerar-arquivo"> {{form_gerar_arquivo.fim }}</span>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h4>Exportar registros</h4>
+	</div>
+	<div class="panel-body">
+
+	<form method="post" action="{% url 'gerar_arquivo' %}">
+		{% csrf_token %}
+		<div class="row panel">
+			<div class="col-sm-6">
+				<div class="input-daterange input-group" id="datepicker">
+					<span class="input-group-addon">Período: </span> <span
+						class="input-gerar-arquivo"> {{form_gerar_arquivo.inicio }}</span>
+					<span class="input-group-addon">até</span> <span
+						class="input-gerar-arquivo"> {{form_gerar_arquivo.fim }}</span>
+				</div>
+			</div>
+			<div class="col-sm-4">&nbsp;</div>
+			<div class="col-sm-2">
+				<input type="submit" value="Gerar" class="btn btn-success">
+			</div>
+	
+		</div>
+	
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="checkbox">
+					<label> <input type="checkbox"
+						value="marcar_como_exportados">Marcar registros como
+						exportados
+					</label>
+				</div>
 			</div>
 		</div>
-		<div class="col-sm-4">&nbsp;</div>
-		<div class="col-sm-2">
-			<input type="submit" value="Gerar" class="btn btn-success">
-		</div>
-
-	</div>
-
-	<div class="row">
-		<div class="col-sm-6">
-			<div class="checkbox">
-				<label> <input type="checkbox"
-					value="marcar_como_exportados">Marcar registros como
-					exportados
-				</label>
+		<div class="row">
+			<div class="col-sm-6">
+				<button class="btn btn-link btn-xs">Desfazer marcar
+					exportados</button>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-6">
-			<button class="btn btn-link btn-xs">Desfazer marcar
-				exportados</button>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-6">
-			<div class="form-group formato">
-			  <label for="{{ form_gerar_arquivo.formato.auto_id }}">{{ form_gerar_arquivo.formato.label }}:</label>
-			  {{ form_gerar_arquivo.formato }}
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="form-group formato">
+				  <label for="{{ form_gerar_arquivo.formato.auto_id }}">{{ form_gerar_arquivo.formato.label }}:</label>
+				  {{ form_gerar_arquivo.formato }}
+				</div>
 			</div>
 		</div>
+	</form>
 	</div>
-</form>
-
+</div>
 <script>
 		$('.input-daterange').datepicker({
 			format : "dd/mm/yyyy",
