--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,8 +3,9 @@
 {% block extrahead %}{{ block.super }}
 	
 		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-		<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css">
+		<!-- <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css"> -->
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
+		<link rel="stylesheet" href="{% static 'admin/css/base.css' %}" type="text/css">
 		<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.min.css' %}" type="text/css">
 		<link rel="stylesheet" type="text/css" href="{% static 'jsimplespreadsheet/jsimplespreadsheet.css' %}">
 		
@@ -34,7 +35,7 @@
 {% endblock  %}
 {% block breadcrumbs %}{% endblock  %}
 {% block content %}
-	<div class="main container">	
+	<div id="container" class="main container">	
 					
 			<ul class="nav nav-tabs" role="tablist">
 				<li role="presentation" id="tab-exportar" ><a href="{% url 'index' %}">Exportar</a></li>
