--- a/core/templates/exportar.html
+++ b/core/templates/exportar.html
@@ -1,67 +1,4 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<h4>Exportar registros</h4>
-	</div>
-	<div class="panel-body">
-
-	<form method="post" action="{% url 'gerar_arquivo' %}">
-		{% csrf_token %}
-		<div class="row panel">
-			<div class="col-sm-6">
-				<div class="input-daterange input-group" id="datepicker">
-					<span class="input-group-addon">Período: </span> <span
-						class="input-gerar-arquivo"> {{form_gerar_arquivo.inicio }}</span>
-					<span class="input-group-addon">até</span> <span
-						class="input-gerar-arquivo"> {{form_gerar_arquivo.fim }}</span>
-				</div>
-			</div>
-			<div class="col-sm-4">&nbsp;</div>
-			<div class="col-sm-2">
-				<input type="submit" value="Gerar" class="btn btn-success">
-			</div>
-	
-		</div>
-	
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="checkbox">
-					<label> <input type="checkbox"
-						value="marcar_como_exportados">Marcar registros como
-						exportados
-					</label>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<button class="btn btn-link btn-xs">Desfazer marcar
-					exportados</button>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group formato">
-				  <label for="{{ form_gerar_arquivo.formato.auto_id }}">{{ form_gerar_arquivo.formato.label }}:</label>
-				  {{ form_gerar_arquivo.formato }}
-				</div>
-			</div>
-		</div>
-	</form>
-	</div>
-</div>
-<script>
-		$('.input-daterange').datepicker({
-			format : "dd/mm/yyyy",
-			language : "pt-BR",
-			daysOfWeekHighlighted : "1,2,3,4,5",
-			calendarWeeks : true,
-			autoclose : true,
-			todayHighlight : true
-		});
-		$('span.input-gerar-arquivo input, .formato select ').each(function(t) {
-			$(this).addClass('input-sm form-control')
-		});
-	</script>
+{% include 'part/exportar_part.html' %}
 {% endblock conteudo %}
