--- a/core/templates/admin/index.html
+++ b/core/templates/admin/index.html
@@ -11,10 +11,11 @@
 
 {% block content %}
 <div id="content-main">
-
+{% if form_gerar_arquivo %}
+	{% include 'part/exportar_part.html' %}
+{% endif %}
 {% if app_list %}
     {% for app in app_list %}
-    	
         <div class="app-{{ app.app_label }} module">
         <table>
         <caption>
@@ -44,8 +45,7 @@
         </table>
         </div>
     {% endfor %}
-{% else %}
-    <p>{% trans "You don't have permission to edit anything." %}</p>
+
 {% endif %}
 </div>
 {% endblock %}
