--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,49 +8,13 @@
 
 
 {% block extrahead %}{{ block.super }}
-	
-		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-		<!-- <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css"> -->
-		<link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
-		<link rel="stylesheet" href="{% static 'admin/css/base.css' %}" type="text/css">
-		<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.min.css' %}" type="text/css">
-		<link rel="stylesheet" type="text/css" href="{% static 'jsimplespreadsheet/jsimplespreadsheet.css' %}">
+	{% include 'part/header.html' %}
 		
-		<script src="{% static 'js/jquery.min.js' %}"></script>
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
-		<script src="{% static 'js/jquery.bootpag.min.js' %}"></script>
-		<script src="{% static 'locales/bootstrap-datepicker.pt-BR.min.js' %}"></script>
-		<script src="{% static 'jsimplespreadsheet/jsimplespreadsheet.js' %}"></script>
-		<script>
-			$(document).ready(function(){
-				var tab;
-				switch(window.location.pathname){
-					case '{% url "colaboradores" %}':
-						tab = 'tab-colaboradores';
-						break;
-					case '{% url "index" %}':					
-						tab = 'tab-exportar';
-						break;
-					default:
-						tab = '';
-						
-				}
-				$('#' + tab).addClass('active');
-			});
-		</script>	
 {% endblock  %}
 {% block breadcrumbs %}{% endblock  %}
 {% block content %}
 	<div id="container" class="main container">	
-					
-			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" id="tab-exportar" ><a href="{% url 'index' %}">Exportar</a></li>
-				<li role="presentation" id="tab-colaboradores"><a href="{% url 'colaboradores' %}">Colaboradores</a></li>
-				<!-- <li role="presentation"><a data-toggle="tab" href="#registros_dia">Registros por dia</a></li>
-				<li role="presentation"><a data-toggle="tab" href="#registros_funcionarios">Registros por funcionários</a></li>
-				<li role="presentation"><a data-toggle="tab" href="#relogios">Relógios</a></li> -->
-			</ul>
+
 			<div class="form-principal">
 			<div class="panel-body">
 					{% if mensagem %}
@@ -70,9 +34,7 @@
 
 		</div>
 
-		<div class="panel panel-default form-principal barra-rodape">
-			<a class="btn btn-default" href="{% url 'site_logout' %}">Sair</a>
-		</div>
+
 	</div>
 	
 </body>
