--- a/core/templates/part/exportar_part.html
+++ b/core/templates/part/exportar_part.html
@@ -23,7 +23,7 @@
 	
 		</div>
 	
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-sm-6">
 				<div class="checkbox">
 					<label> <input type="checkbox"
@@ -38,7 +38,7 @@
 				<button class="btn btn-success btn-xs">Desfazer marcar
 					exportados</button>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="form-group formato">
