--- a/core/templates/part/ferramentas_part.html
+++ b/core/templates/part/ferramentas_part.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="panel-body">
 
-		<form method="post" action="">
+		<form method="post" action="{% url 'recuperar_batidas' %}">
 		
 		{% csrf_token %}
 		<div class="row">
